test/data/resolver/valid/set_property_across_with.cypher
MATCH (a:Person) WITH a SET a.name = 'x' RETURN a
