test/data/resolver/invalid/expr_use_set_value.cypher
MATCH (p:Person) SET p.nickname = $x RETURN p.name
